tableName in model, underscored
