# db/models/user.js
@@ -4,12 +4,12 @@ const bcrypt = require('bcrypt');
 
 module.exports = (sequelize, DataTypes) => {
 	const User = sequelize.define('User', {
-		firstName: {
+		first_name: {
 			type: DataTypes.STRING,
 			allowNull: false,
 			unique: true
 		},
-		lastName: {
+		last_name: {
 			type: DataTypes.STRING,
 			allowNull: false
 		},
@@ -30,12 +30,15 @@ module.exports = (sequelize, DataTypes) => {
 			type: DataTypes.DATE,
 			allowNull: false
 		}
-	}, {});
+	}, {
+		underscored: true,
+		tableName: 'Users'
+	});
 
 	User.beforeCreate((user) => {
 		user.email = user.email.toLowerCase();
-		user.firstName = user.firstName.charAt(0).toUpperCase(0) + user.firstName.slice(1);
-		user.lastName = user.lastName.charAt(0).toUpperCase(0) + user.lastName.slice(1);
+		user.first_name = user.first_name.charAt(0).toUpperCase(0) + user.first_name.slice(1);
+		user.last_name = user.last_name.charAt(0).toUpperCase(0) + user.last_name.slice(1);
 		return bcrypt.hash(user.password, 8).then((hash) => {
 			user.password = hash;
 		});
